--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,6 @@ replace = __version__ = '{new_version}'
 [flake8]
 max-line-length=100
 exclude = docs
+
+[tool.pytest]
+norecursedirs=tests/bionic/helpers
