Ignore deprecation warnings in pytest
These are deprecation warnings for some imports happening in our
dependencies.  In at least one case (pathlib2), the issue seems to be
fixed in master but a new release isn't available on PyPI.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,5 @@ replace = __version__ = '{new_version}'
 max-line-length=100
 exclude = docs
 
-[tool.pytest]
-norecursedirs=tests/bionic/helpers
+[tool:pytest]
+filterwarnings=ignore::DeprecationWarning
