--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
 include README.md
+include LICENSE.txt
 graft bionic
-global-exclude *.py[co]
+graft tests
+graft example
+global-exclude __pycache__ *.py[co] *.sw[po]
