--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -6,5 +6,5 @@ python:
         - method: pip
           path: .
           extra_requirements:
-              - doc
+              - dev
     system_packages: true
