Include new --slow tests in Travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ before_install:
   - sudo apt-get install graphviz
   - pip install --upgrade .[dev]
 script:
-  - pytest
+  - pytest --slow
   - flake8
 
