Add eager pip upgrade setting to Travis config
By default, `pip --upgrade` only upgrades named dependency packages;
recursive dependencies are not upgraded, even if newer versions are
available. This means that the state of the packages in a given Travis
build is path-dependent and arbitrary, and Travis can get stuck in a
bad state with conflicting packages.

Switching to eager upgrade mode means every build will use the latest
version of every package. This doesn't mean we can't get conflicts, but
at least the build should match the behavior seen by a new user
installing everything from scratch.

Anyway, hopefully this will fix the current failing build, which seems
to be caused by incompatible versions of numpy and pyarrow.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 - '3.7'
 before_install:
 - sudo apt-get install graphviz
-- pip install --upgrade .[dev]
+- pip install --upgrade --upgrade-strategy eager .[dev]
 # This prints out all installed package versions, which may help for debugging
 # build failures.
 - pip freeze
