Standardize code with black and add support for pre-commit

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
-max-line-length=100
+max-line-length=88
 exclude = docs,.venv
+ignore = E203, E501, W503, F811, F401
 
 [tool:pytest]
 filterwarnings=ignore::DeprecationWarning
