--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,9 @@
 max-line-length=88
 exclude = docs,.venv
 ignore = E203, E501, W503, F811, F401
+per-file-ignores =
+    # Allow print statements in example code.
+    example/*:T001
 
 [tool:pytest]
 filterwarnings=ignore::DeprecationWarning
