Run some opted-in tests parallely and serially by default

--- a/.github/workflows/bionic-test.yml
+++ b/.github/workflows/bionic-test.yml
@@ -31,4 +31,4 @@ jobs:
         black --check .
     - name: Test with pytest
       run: |
-        pytest --slow
+        pytest --all-execution-modes --slow
