Remove "FIXME" string from `setup.cfg`
Now it will stop showing up when I `git grep FIXME`.

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,9 @@ ignore =
     W503  # "line break occurred before a binary operator"
     # Black handles line lengths for us (slightly less strictly than flake8).
     E501  # "line too long"
-    # We allow TODO and XXX comments in code (but not FIXME).
+    # We allow TODO and XXX comments in code.
+    # (But we don't allow FIX-ME -- hyphen inserted so this string doesn't show up in
+    # searches.)
     T101  # "fixme found (TODO)"
     T102  # "fixme found (XXX)"
 per-file-ignores =
