Add Flake8 plugin to check use of `fail_match`
Now Flake8 will check to see we've used `DescriptorNode.fail_match`
without exhaustively checking all possible node types first. The
advantage to this is that if we add a new node type, we can
automatically detect all the parts of code we need to change.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,5 +16,12 @@ per-file-ignores =
     # Allow print statements in example code.
     example/*:T001
 
+# NOTE On my MacBook this plugin adds about 1 extra second to Flake8's runtime, making
+# it about 5s total. That's not trivial, so it might not be worth it to have this
+# enabled all the time.
+[flake8:local-plugins]
+extension =
+  DNM1 = bionic.flake8.check_dnode_match:Checker
+
 [tool:pytest]
 filterwarnings=ignore::DeprecationWarning
