--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,13 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-    -   id: check-yaml
+    # TODO: This throws an error on MacOS Big Sur. Updating the rev
+    # to v3.3.0 does not fix the problem either. Here is the error for
+    # reference:
+    #
+    #   could not determine a constructor for the tag 'tag:yaml.org,2002:python/tuple'
+    #
+    # -   id: check-yaml
     -   id: check-added-large-files
 
 -   repo: https://github.com/psf/black
