Add compatibility tests for auto vesioning mode

--- a/tests/test_flow/test_persistence_compatibility/inventory/x/bf03879fffc0f3cf154d1aceb2c5a84e4d0123ed767b5dd2c045a00e963bc79e/b43bb99f55c8f6ae95132a699f8b168774235687ee088451a835621779bc220d/metadata_5bbba7567191c19df956e262fb10fd8008db7c1f206333c23217c534964c092b.yaml
+++ b/tests/test_flow/test_persistence_compatibility/inventory/x/bf03879fffc0f3cf154d1aceb2c5a84e4d0123ed767b5dd2c045a00e963bc79e/b43bb99f55c8f6ae95132a699f8b168774235687ee088451a835621779bc220d/metadata_5bbba7567191c19df956e262fb10fd8008db7c1f206333c23217c534964c092b.yaml
@@ -1,6 +1,6 @@
 artifact:
   content_hash: 154223632a
-  url: ../../../../artifacts/x/121f5985-d01a-4108-b038-86e0091df7c8/x.json
+  url: ../../../../artifacts/x/41f1f8b4-d5de-4128-86a4-c8d59d303669/x.json
 descriptor: x
 provenance:
   case_key_elements:
@@ -8,7 +8,7 @@ provenance:
     - x
     - '2'
   code_fingerprint:
-    bytecode_hash: 99241991984f56d688b9d30a36baa3af
+    bytecode_hash: b'`\xad\xae\x8e\xb8b5\x96%\x14\x04\xee\r\xc9w3'
     is_identity: true
     orig_flow_name: null
     version:
