--- a/tests/test_flow/test_persistence_compatibility/inventory/y/3831749ad9e2f7770f297ce3bc368f9c0772b449da41eb5623d897d3f8498bfa/c2934169abf797f8596fe92127d53cd38db287547b45dbef6d55433084b20f4c/metadata_e83a66646b7156e25c54797904ed3ce3832f6ab0ce4ecc4309c810838e6df3b5.yaml
+++ b/tests/test_flow/test_persistence_compatibility/inventory/y/3831749ad9e2f7770f297ce3bc368f9c0772b449da41eb5623d897d3f8498bfa/c2934169abf797f8596fe92127d53cd38db287547b45dbef6d55433084b20f4c/metadata_e83a66646b7156e25c54797904ed3ce3832f6ab0ce4ecc4309c810838e6df3b5.yaml
@@ -1,6 +1,6 @@
 artifact:
   content_hash: 0a16e6f027
-  url: ../../../../artifacts/y/9fa3a331-6315-4df7-9ec3-20a44c9747e8/y.json
+  url: ../../../../artifacts/y/8e5052bc-78c2-4936-be5d-4a0fef117fe9/y.json
 descriptor: y
 provenance:
   case_key_elements:
@@ -8,7 +8,7 @@ provenance:
     - y
     - '3'
   code_fingerprint:
-    bytecode_hash: 99241991984f56d688b9d30a36baa3af
+    bytecode_hash: b'`\xad\xae\x8e\xb8b5\x96%\x14\x04\xee\r\xc9w3'
     is_identity: true
     orig_flow_name: null
     version:
