--- a/tests/test_flow/test_persistence_compatibility/inventory/z/38fd01fc2453e895cc17d50ac9fcbf3682954750252df597a7fc70300bff0707/c3420d47ea1d19a85e573fa1bf991525ed75131508f40b236a99af8206b76575/metadata_65f40c8b2d0e6ff153572764c323165af995a73c68dcb0dccb855d59f75bc759.yaml
+++ b/tests/test_flow/test_persistence_compatibility/inventory/z/38fd01fc2453e895cc17d50ac9fcbf3682954750252df597a7fc70300bff0707/c3420d47ea1d19a85e573fa1bf991525ed75131508f40b236a99af8206b76575/metadata_65f40c8b2d0e6ff153572764c323165af995a73c68dcb0dccb855d59f75bc759.yaml
@@ -1,6 +1,6 @@
 artifact:
   content_hash: f683a42168
-  url: ../../../../artifacts/z/e508e39a-a7be-4c7f-8783-e4324eaa30ce/z.json
+  url: ../../../../artifacts/z/cf1af9da-0c9b-4cc6-b014-804acafeeff5/z.json
 descriptor: z
 provenance:
   case_key_elements:
@@ -8,7 +8,7 @@ provenance:
     - z
     - '4'
   code_fingerprint:
-    bytecode_hash: 99241991984f56d688b9d30a36baa3af
+    bytecode_hash: b'`\xad\xae\x8e\xb8b5\x96%\x14\x04\xee\r\xc9w3'
     is_identity: true
     orig_flow_name: null
     version:
