Update flake8 print code
Error code for print was changed from T001 to T201
https://github.com/JBKahn/flake8-print/pull/55

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,8 @@ ignore =
     T102  # "fixme found (XXX)"
 per-file-ignores =
     # Allow print statements in example code.
-    example/*:T001
+    build/lib/example/*:T201
+    example/*:T201
 
 # NOTE On my MacBook this plugin adds about 1 extra second to Flake8's runtime, making
 # it about 5s total. That's not trivial, so it might not be worth it to have this
