--- a/.github/workflows/bionic-test.yml
+++ b/.github/workflows/bionic-test.yml
@@ -42,7 +42,7 @@ jobs:
         # build failures.
         pip freeze
     - name: Set up gcloud
-      uses: google-github-actions/setup-gcloud@main
+      uses: google-github-actions/setup-gcloud@v0.2.1
       with:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         export_default_credentials: true
